[build-system]
requires = ["numpy", "rasterio", "scikit-learn", "tqdm", "matplotlib", "scipy", "cartopy", "pyproj", "pyqt5", "netCDF4", "pillow"]

[project]
name = "pyosv"
version = "0.0.37"
authors = [
  { name="Alessandro Sebastianelli", email="alessandro.sebastianelli1995@gmail.com" },
]
description = "Python Open Satellite Vision"
readme = "README.md"
license = { file="LICENSE" }
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = ["numpy", "rasterio", "scikit-learn", "tqdm", "matplotlib", "scipy", "cartopy", "pyproj", "pyqt5", "netCDF4", "pillow"]

[project.urls]
"Homepage" = "https://github.com/alessandrosebastianelli/opensv"
"Bug Tracker" = "https://github.com/alessandrosebastianelli/opensv/issues"
